<resources>
    <string name="app_name">Maqdoom</string>
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="sign_in_header">Please Sign In</string>
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="customer">Customer</string>
    <string name="seller">Seller</string>
    <string name="sign_up_header">Please Sign up</string>
    <string name="name">Name</string>
    <string name="re_password">Re-enter Password</string>
    <string name="sign_in_label"><u>Sign In</u></string>
    <string name="seller_label">Are you a <u>Seller?</u></string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="reset_password">Reset Password</string>
    <string name="verification_code">Enter verification code here</string>
    <string name="invalid_email_password">Please provide a valid email and mobile number.</string>
    <string name="check_box">Please select Customer/Seller</string>
    <string name="later">Later</string>
    <string name="submit">Submit</string>
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="travel">Travel</string>
    <string name="supplies">Supplies</string>
    <string name="shops">Shops</string>
    <string name="t_guide">Tourist Guide</string>
    <string name="t_group">Tourist \nGroups</string>
    <string name="t_honeymoon">Honeymoon</string>
    <string name="t_arrange_trips">Arrange \nFamily Trips</string>
    <string name="s_country">Country</string>
    <string name="s_city">City</string>
    <string name="s_language">Language</string>
    <string name="profile_description">Profile</string>
    <string name="profile_language">Language can speak</string>
    <string name="profile_country">Country</string>
    <string name="profile_call">Call</string>
    <string name="profile_whats">WhatsApp</string>
    <string name="profile_message">Message</string>
    <string name="group_title">Tourist Group</string>
    <string name="package_name">Package Name</string>
    <string name="travel_agent">Travel Agent</string>
    <string name="package_address">Address</string>
    <string name="package_price">$1567</string>
    <string name="package_includes">Package Includes</string>
    <string name="no_of_peoples">No. of Peoples</string>
    <string name="tourist_inside">Tourist Group Inside the Country</string>
    <string name="tourist_outside">Tourist Group Outside the Country</string>
    <string name="domestic_text">Domestic</string>
    <string name="international_text">International</string>
    <string name="honeymoon_title">Honeymoon</string>
    <string name="family_trip_title">Family Trip</string>
    <string name="supplies_menu_1">Trips &amp; Wild sorties</string>
    <string name="supplies_menu_2">Cruises</string>
    <string name="package_header">Package Details</string>
    <string name="package_flights">Flights</string>
    <string name="package_hotels">Hotels</string>
    <string name="package_sight_seeing">SightSeeing</string>
    <string name="package_meals">Meals</string>
    <string name="package_site_visit">Sight Visit</string>
    <string name="notification_header">Notifications</string>
    <string name="profile_header">Profile</string>
    <string name="account_details">Account Details</string>
    <string name="profile_details">Profile Details</string>
    <string name="profile_phone">+974 30698904</string>
    <string name="plan_header">Select Plan</string>
    <string name="text_1">Unlimited post</string>
    <string name="text_2">Single member access</string>
    <string name="text_3">Monthly payments</string>
    <string name="text_4">Unsubscribe anytime</string>
    <string name="plan_purchase">Purchase</string>
    <string name="card_number">Card Number</string>
    <string name="card_name">Name on Card</string>
    <string name="expiry">Expiry date</string>
    <string name="card_code">Security Code</string>
    <string name="confirm">Confirm</string>
    <string name="payment_details">Payment Details</string>
    <string name="service_category">Category</string>
    <string name="service_title">Services</string>
    <string name="service_sub_category">Sub Category</string>
    <string name="Service_name">Name</string>
    <string name="name_hint">Please enter name</string>
    <string name="city_hint">Please Enter City</string>
    <string name="Service_phone">Phone</string>
    <string name="phone_hint">Phone number</string>
    <string name="Service_wp">WhatsApp</string>
    <string name="whats_app_hint">WhatsApp number</string>
    <string name="Service_language">Language</string>
    <string name="Service_image">Add image</string>
    <string name="Service_more">More details</string>
    <string name="Service_image_upload_hint">Upload images here</string>
    <string name="add_service">Add Services</string>
    <string name="service_price">Price</string>
    <string name="service_location">Location</string>
    <string name="location_hint">Add location</string>
    <string name="location_price">Add Price</string>
    <string name="service_includes">Package Includes</string>
    <string name="service_includes_hint">Add includes</string>
    <string name="service_people">No. of People</string>
    <string name="service_people_hint">Enter number</string>
    <string name="fill_all_error">Please enter all required fields</string>
    <string name="str_arabic">عربي</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="select_option">Select an option</string>
    <string name="select_country_option">Please select Country</string>
    <string name="select_city_option">Please select City</string>
    <string name="select_language_option">Please select  Language</string>
    <string name="select_category_option">Please select  category</string>
    <string name="select_sub_category_option">Please select sub category</string>
    <string name="str_low_high">Low-High</string>
    <string name="str_high_low">High-Low</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="sure_delete">Do you sure want to Delete?</string>
    <string name="city">City</string>
    <string name="service">Service</string>
    <string name="edit">Edit</string>
</resources>