<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Maqdoom. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>



    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_border_trans">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/navigation_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/navBackBtn"
                    style="@style/Button.ImageButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/back_btn"
                    android:visibility="invisible" />

                <TextView
                    style="@style/TextStyle.Menu.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/select_option"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/navClose"
                    style="@style/Button.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/close" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/flight_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        style="@style/TextStyle.Menu.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:text="@string/package_flights"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:id="@+id/hotel_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextStyle.Menu.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:text="@string/package_hotels"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:id="@+id/meals_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextStyle.Menu.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:text="@string/package_meals"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:id="@+id/ss_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextStyle.Menu.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:text="@string/package_sight_seeing"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:id="@+id/sv_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextStyle.Menu.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:text="@string/package_site_visit"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

</layout>