<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#000000" >
            <RelativeLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@color/navigation_bg">

                <ImageButton
                    android:id="@+id/navBackBtn"
                    style="@style/Button.ImageButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/back_btn" />

                <TextView
                    android:id="@+id/tv_guide"
                    style="@style/TextStyle.Menu.SemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/coverImageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="70dp"
                    android:gravity="center"
                    android:text="@string/plan_header"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@mipmap/registration_new_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/desc_cardView"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:cardCornerRadius="7dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/llTop"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:background="@drawable/corner_border_custom"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvPrice"
                            style="@style/TextStyle.Menu.Normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="50dp"
                            android:gravity="center_horizontal"
                            android:text="$234"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/tvTenure"
                            style="@style/TextStyle.Menu.Normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center_horizontal"
                            android:text="Per month"
                            android:textColor="@color/white"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/llTop"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tVListOne"
                            style="@style/TextStyle.Menu.Normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="30dp"
                            android:gravity="center_horizontal"
                            android:text="@string/text_1"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tVListTwo"
                            style="@style/TextStyle.Menu.Normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tVListOne"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:gravity="center_horizontal"
                            android:text="@string/text_2"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tVListThree"
                            style="@style/TextStyle.Menu.Normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tVListTwo"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:gravity="center_horizontal"
                            android:text="@string/text_3"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tVListFour"
                            style="@style/TextStyle.Menu.Normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tVListThree"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:gravity="center_horizontal"
                            android:text="@string/text_4"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tVListFour"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="50dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/rounded_edge_colored"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvPackagePrice"
                                style="@style/TextStyle.Menu.Normal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingStart="20dp"
                                android:paddingLeft="20dp"
                                android:paddingTop="10dp"
                                android:paddingEnd="20dp"
                                android:paddingRight="20dp"
                                android:paddingBottom="10dp"
                                android:text="@string/plan_purchase"
                                android:textColor="@color/white"
                                android:textSize="15sp" />
                        </RelativeLayout>
                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>